Fix mobile layout bug

--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -24,6 +24,7 @@ body {
   scroll-behavior: smooth;
   color: var(--textGray);
   overflow-wrap: break-word;
+  overflow-x: hidden;
 }
 
 h1, h2, h3, h4, h5, h6, ul, li, p {
